--- a/css/breakout.css
+++ b/css/breakout.css
@@ -53,4 +53,9 @@ h1 {
     left: 0;
     background-color: #333333;
     color: white;
+    min-height: 100vh;
+    width: 400px;
+    padding: 20px;
+    line-height: 1.5;
+    transform: translateX(-400px);
 }
