--- a/css/breakout.css
+++ b/css/breakout.css
@@ -58,4 +58,9 @@ h1 {
     padding: 20px;
     line-height: 1.5;
     transform: translateX(-400px);
+    transition: transform 1s ease-in-out;
+}
+
+.rules.show {
+    transform: translateX(0);
 }
