--- a/css/insect.css
+++ b/css/insect.css
@@ -1,4 +1,4 @@
-
+@import url('https://fonts.googleapis.com/css2?family=Kode+Mono:wght@400..700&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Lemonada:wght@300..700&family=Press+Start+2P&display=swap');
 
 * {
     box-sizing: border-box;
@@ -7,4 +7,7 @@
 body {
     background-color: blue;
     color: white;
+    font-family: "Press Start 2P", system-ui;
+    height: 100vh;
+    overflow: hidden;
 }
