--- a/css/insect.css
+++ b/css/insect.css
@@ -1,12 +1,12 @@
-@import url('https://fonts.googleapis.com/css2?family=Kode+Mono:wght@400..700&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Lemonada:wght@300..700&family=Press+Start+2P&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Anta&family=Anton&family=Charm:wght@400;700&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Madimi+One&family=Micro+5&family=Press+Start+2P&display=swap');
 * {
     box-sizing: border-box;
 }
 
+
 body {
-    background-color: blue;
-    color: white;
+    background-color: #516dff;
+    color: #ffffff;
     font-family: "Press Start 2P", system-ui;
     height: 100vh;
     overflow: hidden;
@@ -21,17 +21,17 @@ body {
 
 .screen {
     height: 100vh;
-    width: 100vw;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
+
 }
 
 .btn {
     border: 0;
-    background-color: white;
-    color: blue;
+    background-color: #ffffff;
+    color: #516dff;
     padding: 15px 20px;
     cursor: pointer;
     font-family: inherit;
@@ -67,9 +67,77 @@ h1 {
 
 .choose-insect-btn {
     background-color: transparent;
-    border: 2px solid white;
-    color: white;
+    border: 2px solid #ffffff;
+    color: #ffffff;
     cursor: pointer;
     font-family: inherit;
-    
+    width: 150px;
+    height: 150px;
+}
+
+.choose-insect-btn:hover {
+    background-color: #ffffff;
+    color: #516dff;
+}
+
+.choose-insect-btn:active {
+    background-color: rgba(255, 255, 255, 0.7);
+}
+
+
+.game-container {
+    position: relative;
+}
+
+.time {
+    position: absolute;
+    top: 20px;
+    left: 20px;
+}
+
+.score {
+    position: absolute;
+    top: 20px;
+    right: 20px;
+}
+
+.message {
+    line-height: 1.7;
+    width: 100%;
+    background-color: rgba(0,0,0, 0.5);
+    z-index: 100;
+    padding: 20px;
+    text-align: center;
+    position: absolute;
+    top: 0;
+    left: 50%;
+    transform: translate(-50%, -150%);
+    transition: transform 0.4s ease-in;
+}
+
+.message.visible {
+    transform: translate(-50%, 150%);
+    opacity: 1;
+}
+
+
+.insect {
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100px;
+    height: 100px;
+    position: absolute;
+    transform: translate(-50%, -50%)scale(1);
+    transition: transform 0.3s ease-in-out;
+}
+
+.insect.caught {
+    transform: translate(-50%, -50%)scale(1);
+}
+
+.insect img {
+    width: 100px;
+    height: 100px;
 }
