Fri, Apr 12, 2024, 10:29 AM -07:00

--- a/css/insect.css
+++ b/css/insect.css
@@ -143,9 +143,9 @@ h1 {
     height: 100px;
 }
 
-.game-container.lebron {
-    width: 200px;
-    height: 100px;
+h6 img {
+    width: 90vw;
+    height: 80vh;
 
 }
 
