--- a/css/insect.css
+++ b/css/insect.css
@@ -106,13 +106,13 @@ h1 {
     line-height: 1.7;
     width: 100%;
     background-color: rgba(0,0,0, 0.5);
-    z-index: 100;
+    z-index: 2;
     padding: 20px;
     text-align: center;
     position: absolute;
     top: 0;
     left: 50%;
-    transform: translate(-50%, 750%);
+    transform: translate(-50%, 950%);
     transition: transform 0.4s ease-in;
 }
 
@@ -132,10 +132,15 @@ h1 {
     position: absolute;
     transform: translate(-50%, -50%)scale(1);
     transition: transform 0.3s ease-in-out;
+    z-index: 1;
 }
 
 .insect.caught {
     transform: translate(-50%, -50%) scale(0);
+}
+
+.insect.win {
+    opacity: 0;
 }
 
 .insect img {
@@ -143,13 +148,30 @@ h1 {
     height: 100px;
 }
 
-h6 img {
-    width: 90vw;
-    height: 80vh;
+.lebron img {
+    width: 1400px;
+    height: 700px;
     opacity: 0;
+    position: absolute;
+    left: 10px;
+    top: 30px;
 }
 
-h6.visible {
+.lebron.win img {
     opacity: 1;
+    z-index: 4;
 }
 
+.lebaron img {
+    opacity: 0;
+    position: absolute;
+    height: 700px;
+    width: 500px;
+    top: 30px;
+    left: 470px;
+}
+
+.lebaron.lose img {
+    opacity: 1;
+    z-index: 7;
+}
