--- a/css/hangman.css
+++ b/css/hangman.css
@@ -22,7 +22,9 @@ h1 {
 .game-container {
     padding: 20px 30px;
     position: relative;
-    
+    margin: auto;
+    height: 350px;
+    width: 450px;
 }
 
 .figure-container {
@@ -34,4 +36,10 @@ h1 {
 
 .figure-part {
     display: none;
+}
+
+.wrong-letters-container {
+    position: absolute;
+    top: 20px;
+    right: 20px;
 }
