--- a/css/insect.css
+++ b/css/insect.css
@@ -175,3 +175,50 @@ h1 {
     opacity: 1;
     z-index: 7;
 }
+
+.dropmenu {
+    background-color: #222;
+    color: #eee;
+    padding: 16px;
+    font-size: 16px;
+    border: none;
+    width: 160px;
+    position: absolute;
+    z-index: 60000;
+}
+
+.menu {
+    position: absolute;
+    display: inline-block;
+    top: 15px;
+    left: 50%;
+}
+
+.work {
+    display: none;
+    position: absolute;
+    background-color: #f1f1f1;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+    z-index: 60000;
+}
+
+.work a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    justify-content: center;
+}
+
+.work a:hover {
+    background-color: #ddd;
+}
+
+.menu:hover .work {
+    display: block;
+}
+
+.menu:hover .dropmenu {
+    background-color: #444;
+}
