--- a/css/breakout.css
+++ b/css/breakout.css
@@ -86,3 +86,50 @@ h1 {
     height: 80px;
     font-size: 15px;
 }
+
+.dropmenu {
+    background-color: #eee;
+    color: #222;
+    padding: 16px;
+    font-size: 16px;
+    border: none;
+    width: 160px;
+}
+
+.menu {
+    position: absolute;
+    display: inline-block;
+    top: 0;
+    right: 0;
+    padding: 25px;
+}
+
+.work {
+    display: none;
+    position: absolute;
+    background-color: #f1f1f1;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+    z-index: 1;
+}
+
+.work a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    justify-content: center;
+}
+
+.work a:hover {
+    background-color: #ddd;
+    color: #222;
+}
+
+.menu:hover .work {
+    display: block;
+}
+
+.menu:hover .dropmenu {
+    background-color: #444;
+}
